--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 .vscode
 contest-queries-release-1m.bin
 contest-data-release-1m.bin
-output.bin
+output*.bin
 test*
+baseline
+comparator
 submission.rpz
 .reprozip-trace
 Public-4M-queries.bin
